# education-management-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirments.txt
.github/workflows/: tests.yml
education_management_system/: .env  alembic.ini  main.py
education_management_system/config/: __init__.py  base.py  dev.py  prod.py  stage.py
education_management_system/core/: db.py
education_management_system/core/tests/: db_test.py
education_management_system/migrations/: env.py
education_management_system/migrations/versions/: 7705567b4b77_add_user_table.py  83445416cf86_add_user_table.py
education_management_system/modules/block_user/: main.py  model.py  router.py  schemas.py  user.py
education_management_system/tests/: conftest.py  test_main.py
education_management_system/tests/block_user/: test_api.py
