[project]
name = "education-management-system"
version = "0.1.0"
description = ""
authors = [
    { name = "Shubhneet", email = "shubhneet.srivastava@gmail.com" }
]
packages = [
    { include = "education_management_system" }
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.117.1,<0.118.0"
uvicorn = ">=0.37.0,<0.38.0"
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
pytest = "^8.4.2"
httpx = "^0.28.1"
anyio = "^4.11.0"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
pytest-asyncio = "^1.2.0"
alembic = "^1.16.5"
psycopg2 = "^2.9.10"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
